JPMS settings for sample demos